_BACKUP/z_HTML-VERSIONS/version2/bgoonz42.gitbook.io/datastructures-in-pytho/practice/untitled/untitled-1.md
<a href="../../index.html" class="link-a079aa82--primary-53a25e66--logoLink-10d08504"></a>

<img src="https://gblobscdn.gitbook.com/spaces%2F-Mij72ebV4OjqJvBacMy%2Favatar-rectangle-1630798188535.png?alt=media" class="image-67b14f24--logo-35ac2404--small-5fbe8ad7" />

<a href="../../index.html" class="link-a079aa82--primary-53a25e66--logoLink-10d08504"></a>

<img src="https://gblobscdn.gitbook.com/spaces%2F-Mij72ebV4OjqJvBacMy%2Favatar-rectangle-1630798188535.png?alt=media" class="image-67b14f24--logo-35ac2404--medium-5fbe8af6" />

<a href="https://bgoonz-blog.netlify.app/#gsc.tab=0" class="button-36063075--medium-6e2a217a--button-195c575e--linkButton-67c61496--links-282dde1f"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1--text-8ee2c8b2"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Main Blog</span></span></a>

<a href="https://www.notion.so/webdevhub42/Python-Data-Structures-Unit-1da9a5d55db844f4b62aff6fd2b4d1ce" class="button-36063075--medium-6e2a217a--button-195c575e--linkButton-67c61496--links-282dde1f"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1--text-8ee2c8b2"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Notion Notes</span></span></a>

<a href="https://bgoonz-branch-the-algos.vercel.app/" class="button-36063075--medium-6e2a217a--button-195c575e--linkButton-67c61496--links-282dde1f"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1--text-8ee2c8b2"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">The Algorithms</span></span></a>

<a href="https://thealgorithms.netlify.app/#" class="button-36063075--medium-6e2a217a--button-195c575e--linkButton-67c61496--links-282dde1f"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1--text-8ee2c8b2"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Python Module Website</span></span></a>

<a href="../../index.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Home</span></a>

<a href="../../navigation.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Navigation</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Cirriculumn</span></span>

<a href="../../cirriculumn/untitled.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Outline</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">wk17</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">wk18</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">wk19</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">wk20</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Utilities</span></span>

<a href="../../utilities/code-lab-notebooks.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Code lab Notebooks</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Repl.IT</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Utilites</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">practice</span></span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Supplemental Practice:</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Abstract Data Structures:</span>

<a href="untitled-7.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Untitled</span></a>

<a href="industry-standard-algorithms.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Industry Standard Algorithms</span></a>

<a href="interview-practice-resources.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Interview Practice Resources</span></a>

<a href="overflow-practice-problems.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Overflow Practice Problems</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Array</span>

<a href="stack.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Stack</span></a>

<a href="queue.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Queue</span></a>

<a href="queue-sandbox.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Queue Sandbox</span></a>

<a href="binary-search.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Binary Search</span></a>

<a href="bst-explained.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">BST Explained</span></a>

<a href="binary-tree.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Binary Tree</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Binary Search Tree</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Recursion</span>

<a href="untitled-5.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Hash Table</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Linked List</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Sorting</span>

<a href="untitled-2.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Searching</span></a>

<a href="untitled-1.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca--navButtonOpened-6a88552e"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Graphs</span></a>

<a href="untitled.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Exotic</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Resources</span></span>

<a href="../../resources/python-vs-javascript.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Python VS JavaScript</span></a>

<a href="../../resources/untitled-1.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Misc. Resources</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Things To Internalize:</span>

<a href="../../resources/intro-to-python-w-jupyter-notebooks.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Intro To Python w Jupyter Notebooks</span></a>

<a href="../../resources/calculating-big-o.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Calculating Big O</span></a>

<a href="../../resources/python-cheat-sheet.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Python Cheat Sheet</span></a>

<a href="../../resources/code-signal-cga-sprint-resources.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Code Signal CGA Sprint Resources</span></a>

<a href="../../resources/youtube.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Youtube</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Useful Links</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">quick-reference</span></span>

<a href="../../misc/untitled/python-snippets.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Python Snippets</span></a>

<a href="../../quick-reference/python-module-index.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Python Module Index:</span></a>

<a href="../../quick-reference/untitled.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Useful Info</span></a>

<a href="../../quick-reference/python-glossary.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Python Glossary</span></a>

<a href="../../quick-reference/untitled-1.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">index</span></a>

<a href="../../bash-commands.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">List Of Python Cheat Sheets</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Python-Docs</span></span>

<a href="../../stdlib/basic-syntax.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Basic Syntax</span></a>

<a href="../../stdlib/python-standard-library-stdlib.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Python Standard Library (STDLIB)</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Docs</span>

<a href="../../stdlib/built-in-functions.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Built In Functions</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Lists</span>

<a href="../../stdlib/dictionaries.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Dictionaries</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Classes</span>

<a href="../../stdlib/queue-and-stacks.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Queue &amp; Stacks</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">MISC</span></span>

<a href="../../interview-prep/interview-resources/unsorted-examples.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Unsorted Examples</span></a>

<a href="../../misc/outline.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Outline</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">About Python</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Interview Prep</span></span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Interview Resources</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Installations Setup & Env</span></span>

<a href="../../installations-setup-and-env/untitled.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">python-setup</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Aux-Exploration</span></span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Subject</span>

<a href="https://www.gitbook.com/?utm_source=content&amp;utm_medium=trademark&amp;utm_campaign=bgoonz42" class="reset-3c756112--trademark-a8da4b94"></a>

<span class="text-4505230f--TextH200-a3425406--textUIFamily-5ebd8e40">Powered by **GitBook**</span>

<span class="text-4505230f--DisplayH900-bfb998fa--textContentFamily-49a318e1">Graphs</span>
===========================================================================================

<span class="text-4505230f--UIH300-2063425d--textUIFamily-5ebd8e40--text-8ee2c8b2"></span>

<span class="text-4505230f--UIH300-2063425d--textUIFamily-5ebd8e40--text-8ee2c8b2"></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="63a43f514f9e48e8b231fc25d2f337ff"><span data-offset-key="63a43f514f9e48e8b231fc25d2f337ff:0"><span data-slate-zero-width="n">​</span></span></span></span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1">Directed Graph:</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1">Graph Traversal</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1">Directed Graph:</span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="d3896122d79e4d1b92b769de14310516"><span data-offset-key="d3896122d79e4d1b92b769de14310516:0"><span data-slate-zero-width="n">​</span></span></span></span>

<span class="text-4505230f--HeadingH700-04e1a2a3--textContentFamily-49a318e1"><span data-key="3e5e4ce4ab1249ecb19ac27df41af98f"><span data-offset-key="3e5e4ce4ab1249ecb19ac27df41af98f:0">Directed Graph:</span></span></span>

    class Node(object):    def __init__(self, value):        self.value = value        self.edges = []​class Edge(object):    def __init__(self, value, node_from, node_to):        self.value = value        self.node_from = node_from        self.node_to = node_to​class Graph(object):    def __init__(self, nodes=[], edges=[]):        self.nodes = nodes        self.edges = edges​    def insert_node(self, new_node_val):        new_node = Node(new_node_val)        self.nodes.append(new_node)​    def insert_edge(self, new_edge_val, node_from_val, node_to_val):        from_found = None        to_found = None        for node in self.nodes:            if node_from_val == node.value:                from_found = node            if node_to_val == node.value:                to_found = node        if from_found == None:            from_found = Node(node_from_val)            self.nodes.append(from_found)        if to_found == None:            to_found = Node(node_to_val)            self.nodes.append(to_found)        new_edge = Edge(new_edge_val, from_found, to_found)        from_found.edges.append(new_edge)        to_found.edges.append(new_edge)        self.edges.append(new_edge)​    def get_edge_list(self):        """Don't return a list of edge objects!        Return a list of triples that looks like this:        (Edge Value, From Node Value, To Node Value)"""        edge_list = []        for item in self.nodes:            for each_edge in item.edges:                edge_tuple = (each_edge.value, each_edge.node_from.value, each_edge.node_to.value)                if edge_tuple not in edge_list:                    edge_list.append(edge_tuple)        return edge_list​    def get_adjacency_list(self):        """Don't return any Node or Edge objects!        You'll return a list of lists.        The indices of the outer list represent        "from" nodes.        Each section in the list will store a list        of tuples that looks like this:        (To Node, Edge Value)"""        adjacency_list = []        edge_list = self.get_edge_list()        max_node_val = 0        for tuple in edge_list:            if(max_node_val<tuple[1]):                max_node_val = tuple[1]            if(max_node_val<tuple[2]):                max_node_val = tuple[2]​        for i in range(max_node_val+1):            node_list = []            for item in edge_list:                if(i==item[1]):                    new_tuple = (item[2], item[0])                    node_list.append(new_tuple)            if(node_list!=[]):                adjacency_list.append(node_list)            else:                adjacency_list.append(None)​        return adjacency_list​    def get_adjacency_matrix(self):        """Return a matrix, or 2D list.        Row numbers represent from nodes,        column numbers represent to nodes.        Store the edge values in each spot,        and a 0 if no edge exists."""        adjacency_matrix = []        adjacency_list = self.get_adjacency_list()        max_node_val = len(adjacency_list)​        for item in adjacency_list:            node_list = [0]*(max_node_val)            if(item!=None):                for tuple in item:                    node_list[tuple[0]]=tuple[1]            adjacency_matrix.append(node_list)        return adjacency_matrix​graph = Graph()graph.insert_edge(100, 1, 2)graph.insert_edge(101, 1, 3)graph.insert_edge(102, 1, 4)graph.insert_edge(103, 3, 4)# Should be [(100, 1, 2), (101, 1, 3), (102, 1, 4), (103, 3, 4)]print(graph.get_edge_list())# Should be [None, [(2, 100), (3, 101), (4, 102)], None, [(4, 103)], None]print(graph.get_adjacency_list())# Should be [[0, 0, 0, 0, 0], [0, 0, 100, 101, 102], [0, 0, 0, 0, 0], [0, 0, 0, 0, 103], [0, 0, 0, 0, 0]]print(graph.get_adjacency_matrix())

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1">Graph Traversal</span>

    class Node(object):    def __init__(self, value):        self.value = value        self.edges = []        self.visited = False​class Edge(object):    def __init__(self, value, node_from, node_to):        self.value = value        self.node_from = node_from        self.node_to = node_to​# You only need to change code with docs strings that have TODO.# Specifically: Graph.dfs_helper and Graph.bfs# New methods have been added to associate node numbers with names# Specifically: Graph.set_node_names# and the methods ending in "_names" which will print names instead# of node numbers​class Graph(object):    def __init__(self, nodes=None, edges=None):        self.nodes = nodes or []        self.edges = edges or []        self.node_names = []        self._node_map = {}​    def set_node_names(self, names):        """The Nth name in names should correspond to node number N.        Node numbers are 0 based (starting at 0).        """        self.node_names = list(names)​    def insert_node(self, new_node_val):        "Insert a new node with value new_node_val"        new_node = Node(new_node_val)        self.nodes.append(new_node)        self._node_map[new_node_val] = new_node        return new_node​    def insert_edge(self, new_edge_val, node_from_val, node_to_val):        "Insert a new edge, creating new nodes if necessary"        nodes = {node_from_val: None, node_to_val: None}        for node in self.nodes:            if node.value in nodes:                nodes[node.value] = node                if all(nodes.values()):                    break        for node_val in nodes:            nodes[node_val] = nodes[node_val] or self.insert_node(node_val)        node_from = nodes[node_from_val]        node_to = nodes[node_to_val]        new_edge = Edge(new_edge_val, node_from, node_to)        node_from.edges.append(new_edge)        node_to.edges.append(new_edge)        self.edges.append(new_edge)​    def get_edge_list(self):        """Return a list of triples that looks like this:        (Edge Value, From Node, To Node)"""        return [(e.value, e.node_from.value, e.node_to.value)                for e in self.edges]​    def get_edge_list_names(self):        """Return a list of triples that looks like this:        (Edge Value, From Node Name, To Node Name)"""        return [(edge.value,                 self.node_names[edge.node_from.value],                 self.node_names[edge.node_to.value])                for edge in self.edges]​    def get_adjacency_list(self):        """Return a list of lists.        The indecies of the outer list represent "from" nodes.        Each section in the list will store a list        of tuples that looks like this:        (To Node, Edge Value)"""        max_index = self.find_max_index()        adjacency_list = [[] for _ in range(max_index)]        for edg in self.edges:            from_value, to_value = edg.node_from.value, edg.node_to.value            adjacency_list[from_value].append((to_value, edg.value))        return [a or None for a in adjacency_list] # replace []'s with None​    def get_adjacency_list_names(self):        """Each section in the list will store a list        of tuples that looks like this:        (To Node Name, Edge Value).        Node names should come from the names set        with set_node_names."""        adjacency_list = self.get_adjacency_list()        def convert_to_names(pair, graph=self):            node_number, value = pair            return (graph.node_names[node_number], value)        def map_conversion(adjacency_list_for_node):            if adjacency_list_for_node is None:                return None            return map(convert_to_names, adjacency_list_for_node)        return [map_conversion(adjacency_list_for_node)                for adjacency_list_for_node in adjacency_list]​    def get_adjacency_matrix(self):        """Return a matrix, or 2D list.        Row numbers represent from nodes,        column numbers represent to nodes.        Store the edge values in each spot,        and a 0 if no edge exists."""        max_index = self.find_max_index()        adjacency_matrix = [[0] * (max_index) for _ in range(max_index)]        for edg in self.edges:            from_index, to_index = edg.node_from.value, edg.node_to.value            adjacency_matrix[from_index][to_index] = edg.value        return adjacency_matrix​    def find_max_index(self):        """Return the highest found node number        Or the length of the node names if set with set_node_names()."""        if len(self.node_names) > 0:            return len(self.node_names)        max_index = -1        if len(self.nodes):            for node in self.nodes:                if node.value > max_index:                    max_index = node.value        return max_index​    def find_node(self, node_number):        "Return the node with value node_number or None"        return self._node_map.get(node_number)​    def _clear_visited(self):        for node in self.nodes:            node.visited = False​    def dfs_helper(self, start_node):        """TODO: Write the helper function for a recursive implementation        of Depth First Search iterating through a node's edges. The        output should be a list of numbers corresponding to the        values of the traversed nodes.        ARGUMENTS: start_node is the starting Node        MODIFIES: the value of the visited property of nodes in self.nodes        RETURN: a list of the traversed node values (integers).        """        ret_list = [start_node.value]        # Your code here        start_node.visited = True        next_edges = start_node.edges        next_vals = []        for this_edge in next_edges:            #iterates through edges to find the first edge that has places not 'visited'            if(this_edge.node_to.visited==False):                # adds all places not visited along this edge to the list of nodes                # to be returned, using recursion                next_vals.extend(self.dfs_helper(this_edge.node_to))​        if(next_vals!=[]):            ret_list.extend(next_vals)        return ret_list​    def dfs(self, start_node_num):        """Outputs a list of numbers corresponding to the traversed nodes        in a Depth First Search.        ARGUMENTS: start_node_num is the starting node number (integer)        MODIFIES: the value of the visited property of nodes in self.nodes        RETURN: a list of the node values (integers)."""        self._clear_visited()        start_node = self.find_node(start_node_num)        return self.dfs_helper(start_node)​    def dfs_names(self, start_node_num):        """Return the results of dfs with numbers converted to names."""        return [self.node_names[num] for num in self.dfs(start_node_num)]​    def bfs(self, start_node_num):        """TODO: Create an iterative implementation of Breadth First Search        iterating through a node's edges. The output should be a list of        numbers corresponding to the traversed nodes.        ARGUMENTS: start_node_num is the node number (integer)        MODIFIES: the value of the visited property of nodes in self.nodes        RETURN: a list of the node values (integers)."""        node = self.find_node(start_node_num)        self._clear_visited()        ret_list = [node.value]        # Your code here        node.visited = True        total_edges = node.edges        node_queue = [node]​        while(node_queue!=[]):            this_node = node_queue[0]            node_queue = node_queue[1:]            node_edges = this_node.edges            for each_edge in node_edges:                if(each_edge.node_to.visited==False):                    node_queue.append(each_edge.node_to)                    each_edge.node_to.visited = True                    ret_list.append(each_edge.node_to.value)​        return ret_list​    def bfs_names(self, start_node_num):        """Return the results of bfs with numbers converted to names."""        return [self.node_names[num] for num in self.bfs(start_node_num)]​graph = Graph()​# You do not need to change anything below this line.# You only need to implement Graph.dfs_helper and Graph.bfs​graph.set_node_names(('Mountain View',   # 0                      'San Francisco',   # 1                      'London',          # 2                      'Shanghai',        # 3                      'Berlin',          # 4                      'Sao Paolo',       # 5                      'Bangalore'))      # 6​graph.insert_edge(51, 0, 1)     # MV <-> SFgraph.insert_edge(51, 1, 0)     # SF <-> MVgraph.insert_edge(9950, 0, 3)   # MV <-> Shanghaigraph.insert_edge(9950, 3, 0)   # Shanghai <-> MVgraph.insert_edge(10375, 0, 5)  # MV <-> Sao Paolograph.insert_edge(10375, 5, 0)  # Sao Paolo <-> MVgraph.insert_edge(9900, 1, 3)   # SF <-> Shanghaigraph.insert_edge(9900, 3, 1)   # Shanghai <-> SFgraph.insert_edge(9130, 1, 4)   # SF <-> Berlingraph.insert_edge(9130, 4, 1)   # Berlin <-> SFgraph.insert_edge(9217, 2, 3)   # London <-> Shanghaigraph.insert_edge(9217, 3, 2)   # Shanghai <-> Londongraph.insert_edge(932, 2, 4)    # London <-> Berlingraph.insert_edge(932, 4, 2)    # Berlin <-> Londongraph.insert_edge(9471, 2, 5)   # London <-> Sao Paolograph.insert_edge(9471, 5, 2)   # Sao Paolo <-> London# (6) 'Bangalore' is intentionally disconnected (no edges)# for this problem and should produce None in the# Adjacency List, etc.​import pprintpp = pprint.PrettyPrinter(indent=2)​print("Edge List")pp.pprint(graph.get_edge_list_names())​print("\nAdjacency List")pp.pprint(graph.get_adjacency_list_names())​print("\nAdjacency Matrix")pp.pprint(graph.get_adjacency_matrix())​print("\nDepth First Search")pp.pprint(graph.dfs_names(2))​# Should print:# Depth First Search# ['London', 'Shanghai', 'Mountain View', 'San Francisco', 'Berlin', 'Sao Paolo']​print("\nBreadth First Search")pp.pprint(graph.bfs_names(2))# test error reporting# pp.pprint(['Sao Paolo', 'Mountain View', 'San Francisco', 'London', 'Shanghai', 'Berlin'])​# Should print:# Breadth First Search# ['London', 'Shanghai', 'Berlin', 'Sao Paolo', 'Mountain View', 'San Francisco']​

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="2f54a7a54cb542549794d3e06d9e3e9c"><span data-offset-key="2f54a7a54cb542549794d3e06d9e3e9c:0"><span data-slate-zero-width="n">​</span></span></span></span>

<a href="untitled-2.html" class="reset-3c756112--card-6570f064--whiteCard-fff091a4--cardPrevious-56a5e674"></a>

<span class="text-4505230f--TextH200-a3425406--textContentFamily-49a318e1">Previous</span>

<span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Searching</span>

<a href="untitled.html" class="reset-3c756112--card-6570f064--whiteCard-fff091a4--cardNext-19241c42"></a>

<span class="text-4505230f--TextH200-a3425406--textContentFamily-49a318e1">Next</span>

<span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Exotic</span>

<img src="https://avatars.githubusercontent.com/u/66654881?v=4" class="image-67b14f24--avatar-1c1d03ec" />

<span class="text-4505230f--TextH200-a3425406--textContentFamily-49a318e1">Last updated 3 hours ago</span>

<a href="https://github.com/bgoonz/python-gitbook/blob/master/practice/untitled/untitled-1.md" class="reset-3c756112--menuItem-aa02f6ec--menuItemLight-757d5235--menuItemInline-173bdf97--pageSideMenuItem-22949732"></a>

<span class="text-4505230f--UIH300-2063425d--textUIFamily-5ebd8e40">Edit on GitHub</span>

<span class="text-4505230f--UIH300-2063425d--textUIFamily-5ebd8e40">Export as PDF</span>
