_BACKUP/z_HTML-VERSIONS/version4/bgoonz42.gitbook.io/datastructures-in-pytho/practice/untitled/untitled-1.md
<a href="https://bgoonz42.gitbook.io/datastructures-in-pytho/" class="link-a079aa82--primary-53a25e66--logoLink-10d08504"></a>

<img src="https://gblobscdn.gitbook.com/spaces%2F-Mij72ebV4OjqJvBacMy%2Favatar-rectangle-1631155247747.png?alt=media" class="image-67b14f24--logo-35ac2404--small-5fbe8ad7" />

<a href="https://bgoonz42.gitbook.io/datastructures-in-pytho/" class="link-a079aa82--primary-53a25e66--logoLink-10d08504"></a>

<img src="https://gblobscdn.gitbook.com/spaces%2F-Mij72ebV4OjqJvBacMy%2Favatar-rectangle-1631155247747.png?alt=media" class="image-67b14f24--logo-35ac2404--medium-5fbe8af6" />

<a href="https://bgoonz-blog.netlify.app/#gsc.tab=0" class="button-36063075--medium-6e2a217a--button-f76f0854--linkButton-67c61496--links-282dde1f"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1--text-8ee2c8b2"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">My Blog</span></span></a>

<a href="https://www.notion.so/webdevhub42/Python-Data-Structures-Unit-1da9a5d55db844f4b62aff6fd2b4d1ce" class="button-36063075--medium-6e2a217a--button-f76f0854--linkButton-67c61496--links-282dde1f"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1--text-8ee2c8b2"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Notion Notes</span></span></a>

<a href="https://bgoonz-branch-the-algos.vercel.app/" class="button-36063075--medium-6e2a217a--button-f76f0854--linkButton-67c61496--links-282dde1f"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1--text-8ee2c8b2"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">The Algorithms</span></span></a>

<a href="https://thealgorithms.netlify.app/#" class="button-36063075--medium-6e2a217a--button-f76f0854--linkButton-67c61496--links-282dde1f"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1--text-8ee2c8b2"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Python Module Website</span></span></a>

<a href="https://bgoonz42.gitbook.io/datastructures-in-pytho/" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Home</span></a>

<a href="../../index.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Downloads &amp; Misc-Assets</span></a>

<a href="../../readme-1.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">README</span></a>

<a href="../../navigation.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Navigation</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Cirriculumn</span></span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Outline</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">wk17</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">wk18</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">wk19</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">wk20</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Abstract Data Structures</span></span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Abstract Data Structures:</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Data Structures Overview</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Array</span>

<a href="binary-search.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Binary Search</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Exotic</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Graphs</span>

<a href="overflow-practice-problems.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Overflow Practice Problems</span></a>

<a href="../../abstract-data-structures/untitled-1/untitled-1/graphs-explained.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Graphs Explained</span></a>

<a href="../../abstract-data-structures/untitled-1/untitled-1/earliest-ancestor.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Earliest Ancestor</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">\_Mini Graph-Projects</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Graph FAQ</span>

<a href="../../abstract-data-structures/untitled-1/untitled-1/connected-components.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Connected Components</span></a>

<a href="../../abstract-data-structures/untitled-1/untitled-1/untitled.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Randomness</span></a>

<a href="../../abstract-data-structures/untitled-1/untitled-1/graph-bfs.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Graph BFS</span></a>

<a href="../../abstract-data-structures/untitled-1/untitled-1/topological-sort.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Topological Sort</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Hash Table</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Heap</span>

<a href="../../abstract-data-structures/untitled-1/string.html" class="navButton-94f2579c--pageItemWithChildrenNested-2c5d8183--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">String</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Map</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Queue</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Tree</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Recursion</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Linked List</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Set</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Sorting</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Stack</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Searching</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Utilities</span></span>

<a href="../../utilities/code-lab-notebooks.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Code lab Notebooks</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Repl.IT</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Utilites</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">practice</span></span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">GCA Sprint Prep:</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Supplemental Practice:</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Resources</span></span>

<a href="../../resources/python-cheat-sheet.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Python Cheat Sheet</span></a>

<a href="../../resources/intro-2-python.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Intro 2 Python</span></a>

<a href="../../resources/untitled-2.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Inheritance</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Strings</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Dictionaries</span>

<a href="../../resources/python-vs-javascript.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Python VS JavaScript</span></a>

<a href="../../resources/untitled-1.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Misc. Resources</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Things To Internalize:</span>

<a href="../../resources/intro-to-python-w-jupyter-notebooks.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Intro To Python w Jupyter Notebooks</span></a>

<a href="../../resources/calculating-big-o.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Calculating Big O</span></a>

<a href="../../resources/awesome-python.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Awesome Python</span></a>

<a href="../../resources/youtube.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Youtube</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Useful Links</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">quick-reference</span></span>

<a href="../../quick-reference/my-medium-articles.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">My Medium Articles</span></a>

<a href="../../quick-reference/free-python-books.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Free Python Books</span></a>

<a href="../../quick-reference/why-python.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">WHY Python?</span></a>

<a href="../../quick-reference/python-snippets.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Python Snippets</span></a>

<a href="../../quick-reference/python3-regex.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Python3 Regex</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Python Module Index:</span>

<a href="../../quick-reference/creating-python-modules.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Creating Python Modules</span></a>

<a href="../../quick-reference/untitled.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Useful Info</span></a>

<a href="../../quick-reference/python-glossary.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Python Glossary</span></a>

<a href="../../quick-reference/untitled-1.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Python Snippets</span></a>

<a href="../../quick-reference/bash-commands.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">List Of Python Cheat Sheets</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Docs</span></span>

<a href="../../stdlib/touple.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Touple</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Docs</span>

<a href="../../stdlib/basic-syntax.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Basic Syntax</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Lists</span>

<a href="../../stdlib/conditionals-and-loops.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Conditionals and loops</span></a>

<a href="../../stdlib/dictionaries.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Dictionaries</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Classes and objects</span>

<a href="../../stdlib/untitled-1.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Functions</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Built In Functions</span>

<a href="../../stdlib/untitled-2.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Built-in Types</span></a>

<a href="../../stdlib/dictionaries-sets-files-and-modules.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Dictionaries, sets, files, and modules</span></a>

<a href="../../stdlib/queue-and-stacks.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Queue &amp; Stacks</span></a>

<a href="../../stdlib/values-expressions-and-statments.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Values Expressions &amp; Statments</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">MISC</span></span>

<a href="../../misc/built-in-methods-and-functions.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Built-in Methods &amp; Functions</span></a>

<a href="../../misc/math.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Math</span></a>

<a href="../../misc/unsorted-examples.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Unsorted Examples</span></a>

<a href="../../misc/outline.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Outline</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">About Python</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Interview Prep</span></span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Interview Resources</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Installations Setup & Env</span></span>

<a href="../../installations-setup-and-env/untitled.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">python-setup</span></a>

<a href="../../installations-setup-and-env/installing-python-modules.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Installing Python Modules</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Aux-Exploration</span></span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Subject</span>

<a href="https://www.gitbook.com/?utm_source=content&amp;utm_medium=trademark&amp;utm_campaign=bgoonz42" class="reset-3c756112--trademark-a8da4b94"></a>

<span class="text-4505230f--TextH200-a3425406--textUIFamily-5ebd8e40">Powered by **GitBook**</span>

<span class="text-4505230f--DisplayH900-bfb998fa--textContentFamily-49a318e1">Graphs</span>
===========================================================================================

<span class="text-4505230f--UIH300-2063425d--textUIFamily-5ebd8e40--text-8ee2c8b2"></span>

<span class="text-4505230f--UIH300-2063425d--textUIFamily-5ebd8e40--text-8ee2c8b2"></span>

<span class="text-4505230f--UIH300-2063425d--textUIFamily-5ebd8e40--text-8ee2c8b2"></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="63a43f514f9e48e8b231fc25d2f337ff"><span data-offset-key="63a43f514f9e48e8b231fc25d2f337ff:0">Projects:</span></span></span>

<a href="https://firebasestorage.googleapis.com/v0/b/gitbook-28427.appspot.com/o/assets%2F-Mij72ebV4OjqJvBacMy%2F-MjHx4PG4pc0DZBnqXDS%2F-MjHxFy4tk4SPgDYxMQ5%2Fprojects.zip?alt=media&amp;token=b3a61874-6b78-4efc-887f-143a53ac76bc" class="reset-3c756112--card-6570f064--whiteCard-fff091a4--S400Vertical-a18add7e"></a>

<span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">projects.zip</span>

<span class="text-4505230f--TextH200-a3425406--textContentFamily-49a318e1">projects.zip - 760KB</span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="acd257a579044ef495a4556396050de9"><span data-offset-key="acd257a579044ef495a4556396050de9:0"><span data-slate-zero-width="n">​</span></span></span></span>

<span class="text-4505230f--HeadingH700-04e1a2a3--textContentFamily-49a318e1"><span data-key="f36415f0bb644e1394b5a232015b265f"><span data-offset-key="f36415f0bb644e1394b5a232015b265f:0">Graph</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="b9c883644c634c23945a2cce09a339aa"><span data-offset-key="b9c883644c634c23945a2cce09a339aa:0">Given a list of sorted words from an alien dictionary, find the order of the alphabet.</span></span></span>

    -   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="ca5205399ee341d5b388e483a1ec0156"><span data-offset-key="ca5205399ee341d5b388e483a1ec0156:0">Alien Dictionary Topological Sort question.</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="a83e6340d48f45c3b332af02913b9dca"><span data-offset-key="a83e6340d48f45c3b332af02913b9dca:0">Find if a given string matches any path in a labeled graph. A path may contain cycles.</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="2d6896675700454a872c0af253664ff7"><span data-offset-key="2d6896675700454a872c0af253664ff7:0">Given a bipartite graph, separate the vertices into two sets.</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="1b56b6d3dca64773b3bda803ddafc535"><span data-offset-key="1b56b6d3dca64773b3bda803ddafc535:0">You are a thief trying to sneak across a rectangular 100 x 100m field. There are alarms placed on the fields and they each have a circular sensing radius which will trigger if anyone steps into it. Each alarm has its own radius. Determine if you can get from one end of the field to the other end.</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="0ec60ce85aba493081dd716891723729"><span data-offset-key="0ec60ce85aba493081dd716891723729:0">Given a graph and two nodes, determine if there exists a path between them.</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="4a7e5684e6074b1ab1354c68bb1e9505"><span data-offset-key="4a7e5684e6074b1ab1354c68bb1e9505:0">Determine if a cycle exists in the graph.</span></span></span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1">Directed Graph:</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1">Graph Traversal</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1">Directed Graph:</span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="d3896122d79e4d1b92b769de14310516"><span data-offset-key="d3896122d79e4d1b92b769de14310516:0"><span data-slate-zero-width="n">​</span></span></span></span>

<span class="text-4505230f--HeadingH700-04e1a2a3--textContentFamily-49a318e1"><span data-key="3e5e4ce4ab1249ecb19ac27df41af98f"><span data-offset-key="3e5e4ce4ab1249ecb19ac27df41af98f:0">Directed Graph:</span></span></span>

    class Node(object):    def __init__(self, value):        self.value = value        self.edges = []​class Edge(object):    def __init__(self, value, node_from, node_to):        self.value = value        self.node_from = node_from        self.node_to = node_to​class Graph(object):    def __init__(self, nodes=[], edges=[]):        self.nodes = nodes        self.edges = edges​    def insert_node(self, new_node_val):        new_node = Node(new_node_val)        self.nodes.append(new_node)​    def insert_edge(self, new_edge_val, node_from_val, node_to_val):        from_found = None        to_found = None        for node in self.nodes:            if node_from_val == node.value:                from_found = node            if node_to_val == node.value:                to_found = node        if from_found == None:            from_found = Node(node_from_val)            self.nodes.append(from_found)        if to_found == None:            to_found = Node(node_to_val)            self.nodes.append(to_found)        new_edge = Edge(new_edge_val, from_found, to_found)        from_found.edges.append(new_edge)        to_found.edges.append(new_edge)        self.edges.append(new_edge)​    def get_edge_list(self):        """Don't return a list of edge objects!        Return a list of triples that looks like this:        (Edge Value, From Node Value, To Node Value)"""        edge_list = []        for item in self.nodes:            for each_edge in item.edges:                edge_tuple = (each_edge.value, each_edge.node_from.value, each_edge.node_to.value)                if edge_tuple not in edge_list:                    edge_list.append(edge_tuple)        return edge_list​    def get_adjacency_list(self):        """Don't return any Node or Edge objects!        You'll return a list of lists.        The indices of the outer list represent        "from" nodes.        Each section in the list will store a list        of tuples that looks like this:        (To Node, Edge Value)"""        adjacency_list = []        edge_list = self.get_edge_list()        max_node_val = 0        for tuple in edge_list:            if(max_node_val<tuple[1]):                max_node_val = tuple[1]            if(max_node_val<tuple[2]):                max_node_val = tuple[2]​        for i in range(max_node_val+1):            node_list = []            for item in edge_list:                if(i==item[1]):                    new_tuple = (item[2], item[0])                    node_list.append(new_tuple)            if(node_list!=[]):                adjacency_list.append(node_list)            else:                adjacency_list.append(None)​        return adjacency_list​    def get_adjacency_matrix(self):        """Return a matrix, or 2D list.        Row numbers represent from nodes,        column numbers represent to nodes.        Store the edge values in each spot,        and a 0 if no edge exists."""        adjacency_matrix = []        adjacency_list = self.get_adjacency_list()        max_node_val = len(adjacency_list)​        for item in adjacency_list:            node_list = [0]*(max_node_val)            if(item!=None):                for tuple in item:                    node_list[tuple[0]]=tuple[1]            adjacency_matrix.append(node_list)        return adjacency_matrix​graph = Graph()graph.insert_edge(100, 1, 2)graph.insert_edge(101, 1, 3)graph.insert_edge(102, 1, 4)graph.insert_edge(103, 3, 4)# Should be [(100, 1, 2), (101, 1, 3), (102, 1, 4), (103, 3, 4)]print(graph.get_edge_list())# Should be [None, [(2, 100), (3, 101), (4, 102)], None, [(4, 103)], None]print(graph.get_adjacency_list())# Should be [[0, 0, 0, 0, 0], [0, 0, 100, 101, 102], [0, 0, 0, 0, 0], [0, 0, 0, 0, 103], [0, 0, 0, 0, 0]]print(graph.get_adjacency_matrix())

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1">Graph Traversal</span>

    class Node(object):    def __init__(self, value):        self.value = value        self.edges = []        self.visited = False​class Edge(object):    def __init__(self, value, node_from, node_to):        self.value = value        self.node_from = node_from        self.node_to = node_to​# You only need to change code with docs strings that have TODO.# Specifically: Graph.dfs_helper and Graph.bfs# New methods have been added to associate node numbers with names# Specifically: Graph.set_node_names# and the methods ending in "_names" which will print names instead# of node numbers​class Graph(object):    def __init__(self, nodes=None, edges=None):        self.nodes = nodes or []        self.edges = edges or []        self.node_names = []        self._node_map = {}​    def set_node_names(self, names):        """The Nth name in names should correspond to node number N.        Node numbers are 0 based (starting at 0).        """        self.node_names = list(names)​    def insert_node(self, new_node_val):        "Insert a new node with value new_node_val"        new_node = Node(new_node_val)        self.nodes.append(new_node)        self._node_map[new_node_val] = new_node        return new_node​    def insert_edge(self, new_edge_val, node_from_val, node_to_val):        "Insert a new edge, creating new nodes if necessary"        nodes = {node_from_val: None, node_to_val: None}        for node in self.nodes:            if node.value in nodes:                nodes[node.value] = node                if all(nodes.values()):                    break        for node_val in nodes:            nodes[node_val] = nodes[node_val] or self.insert_node(node_val)        node_from = nodes[node_from_val]        node_to = nodes[node_to_val]        new_edge = Edge(new_edge_val, node_from, node_to)        node_from.edges.append(new_edge)        node_to.edges.append(new_edge)        self.edges.append(new_edge)​    def get_edge_list(self):        """Return a list of triples that looks like this:        (Edge Value, From Node, To Node)"""        return [(e.value, e.node_from.value, e.node_to.value)                for e in self.edges]​    def get_edge_list_names(self):        """Return a list of triples that looks like this:        (Edge Value, From Node Name, To Node Name)"""        return [(edge.value,                 self.node_names[edge.node_from.value],                 self.node_names[edge.node_to.value])                for edge in self.edges]​    def get_adjacency_list(self):        """Return a list of lists.        The indecies of the outer list represent "from" nodes.        Each section in the list will store a list        of tuples that looks like this:        (To Node, Edge Value)"""        max_index = self.find_max_index()        adjacency_list = [[] for _ in range(max_index)]        for edg in self.edges:            from_value, to_value = edg.node_from.value, edg.node_to.value            adjacency_list[from_value].append((to_value, edg.value))        return [a or None for a in adjacency_list] # replace []'s with None​    def get_adjacency_list_names(self):        """Each section in the list will store a list        of tuples that looks like this:        (To Node Name, Edge Value).        Node names should come from the names set        with set_node_names."""        adjacency_list = self.get_adjacency_list()        def convert_to_names(pair, graph=self):            node_number, value = pair            return (graph.node_names[node_number], value)        def map_conversion(adjacency_list_for_node):            if adjacency_list_for_node is None:                return None            return map(convert_to_names, adjacency_list_for_node)        return [map_conversion(adjacency_list_for_node)                for adjacency_list_for_node in adjacency_list]​    def get_adjacency_matrix(self):        """Return a matrix, or 2D list.        Row numbers represent from nodes,        column numbers represent to nodes.        Store the edge values in each spot,        and a 0 if no edge exists."""        max_index = self.find_max_index()        adjacency_matrix = [[0] * (max_index) for _ in range(max_index)]        for edg in self.edges:            from_index, to_index = edg.node_from.value, edg.node_to.value            adjacency_matrix[from_index][to_index] = edg.value        return adjacency_matrix​    def find_max_index(self):        """Return the highest found node number        Or the length of the node names if set with set_node_names()."""        if len(self.node_names) > 0:            return len(self.node_names)        max_index = -1        if len(self.nodes):            for node in self.nodes:                if node.value > max_index:                    max_index = node.value        return max_index​    def find_node(self, node_number):        "Return the node with value node_number or None"        return self._node_map.get(node_number)​    def _clear_visited(self):        for node in self.nodes:            node.visited = False​    def dfs_helper(self, start_node):        """TODO: Write the helper function for a recursive implementation        of Depth First Search iterating through a node's edges. The        output should be a list of numbers corresponding to the        values of the traversed nodes.        ARGUMENTS: start_node is the starting Node        MODIFIES: the value of the visited property of nodes in self.nodes        RETURN: a list of the traversed node values (integers).        """        ret_list = [start_node.value]        # Your code here        start_node.visited = True        next_edges = start_node.edges        next_vals = []        for this_edge in next_edges:            #iterates through edges to find the first edge that has places not 'visited'            if(this_edge.node_to.visited==False):                # adds all places not visited along this edge to the list of nodes                # to be returned, using recursion                next_vals.extend(self.dfs_helper(this_edge.node_to))​        if(next_vals!=[]):            ret_list.extend(next_vals)        return ret_list​    def dfs(self, start_node_num):        """Outputs a list of numbers corresponding to the traversed nodes        in a Depth First Search.        ARGUMENTS: start_node_num is the starting node number (integer)        MODIFIES: the value of the visited property of nodes in self.nodes        RETURN: a list of the node values (integers)."""        self._clear_visited()        start_node = self.find_node(start_node_num)        return self.dfs_helper(start_node)​    def dfs_names(self, start_node_num):        """Return the results of dfs with numbers converted to names."""        return [self.node_names[num] for num in self.dfs(start_node_num)]​    def bfs(self, start_node_num):        """TODO: Create an iterative implementation of Breadth First Search        iterating through a node's edges. The output should be a list of        numbers corresponding to the traversed nodes.        ARGUMENTS: start_node_num is the node number (integer)        MODIFIES: the value of the visited property of nodes in self.nodes        RETURN: a list of the node values (integers)."""        node = self.find_node(start_node_num)        self._clear_visited()        ret_list = [node.value]        # Your code here        node.visited = True        total_edges = node.edges        node_queue = [node]​        while(node_queue!=[]):            this_node = node_queue[0]            node_queue = node_queue[1:]            node_edges = this_node.edges            for each_edge in node_edges:                if(each_edge.node_to.visited==False):                    node_queue.append(each_edge.node_to)                    each_edge.node_to.visited = True                    ret_list.append(each_edge.node_to.value)​        return ret_list​    def bfs_names(self, start_node_num):        """Return the results of bfs with numbers converted to names."""        return [self.node_names[num] for num in self.bfs(start_node_num)]​graph = Graph()​# You do not need to change anything below this line.# You only need to implement Graph.dfs_helper and Graph.bfs​graph.set_node_names(('Mountain View',   # 0                      'San Francisco',   # 1                      'London',          # 2                      'Shanghai',        # 3                      'Berlin',          # 4                      'Sao Paolo',       # 5                      'Bangalore'))      # 6​graph.insert_edge(51, 0, 1)     # MV <-> SFgraph.insert_edge(51, 1, 0)     # SF <-> MVgraph.insert_edge(9950, 0, 3)   # MV <-> Shanghaigraph.insert_edge(9950, 3, 0)   # Shanghai <-> MVgraph.insert_edge(10375, 0, 5)  # MV <-> Sao Paolograph.insert_edge(10375, 5, 0)  # Sao Paolo <-> MVgraph.insert_edge(9900, 1, 3)   # SF <-> Shanghaigraph.insert_edge(9900, 3, 1)   # Shanghai <-> SFgraph.insert_edge(9130, 1, 4)   # SF <-> Berlingraph.insert_edge(9130, 4, 1)   # Berlin <-> SFgraph.insert_edge(9217, 2, 3)   # London <-> Shanghaigraph.insert_edge(9217, 3, 2)   # Shanghai <-> Londongraph.insert_edge(932, 2, 4)    # London <-> Berlingraph.insert_edge(932, 4, 2)    # Berlin <-> Londongraph.insert_edge(9471, 2, 5)   # London <-> Sao Paolograph.insert_edge(9471, 5, 2)   # Sao Paolo <-> London# (6) 'Bangalore' is intentionally disconnected (no edges)# for this problem and should produce None in the# Adjacency List, etc.​import pprintpp = pprint.PrettyPrinter(indent=2)​print("Edge List")pp.pprint(graph.get_edge_list_names())​print("\nAdjacency List")pp.pprint(graph.get_adjacency_list_names())​print("\nAdjacency Matrix")pp.pprint(graph.get_adjacency_matrix())​print("\nDepth First Search")pp.pprint(graph.dfs_names(2))​# Should print:# Depth First Search# ['London', 'Shanghai', 'Mountain View', 'San Francisco', 'Berlin', 'Sao Paolo']​print("\nBreadth First Search")pp.pprint(graph.bfs_names(2))# test error reporting# pp.pprint(['Sao Paolo', 'Mountain View', 'San Francisco', 'London', 'Shanghai', 'Berlin'])​# Should print:# Breadth First Search# ['London', 'Shanghai', 'Berlin', 'Sao Paolo', 'Mountain View', 'San Francisco']​

<span class="text-4505230f--HeadingH700-04e1a2a3--textContentFamily-49a318e1"><span data-key="f7f109f1382e42b8a04d5d0f2a8173ae"><span data-offset-key="f7f109f1382e42b8a04d5d0f2a8173ae:0">Intro to Graphs</span></span></span>

<figure><img src="https://gblobscdn.gitbook.com/assets%2F-Mij72ebV4OjqJvBacMy%2Fsync%2F381ffb342b3923995268217a4178a4f1b9dd0f18.png?alt=media" alt="Directed Graph " class="image-52799b3c" /><figcaption><span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1" style="max-width: 100%">Directed Graph </span></figcaption></figure>

<span class="text-4505230f--HeadingH600-23f228db--textContentFamily-49a318e1"><span data-key="49d48067836a46bfb02a53260f543ae8"><span data-offset-key="49d48067836a46bfb02a53260f543ae8:0">Objectives</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="5e403cb130ff4f60b718ac871ee4ab37"><span data-offset-key="5e403cb130ff4f60b718ac871ee4ab37:0">Learn what graphs are</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="0a62a02ab0c842448ddc16716e59fd68"><span data-offset-key="0a62a02ab0c842448ddc16716e59fd68:0">Learn the components of graphs</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="fe42fe1dbdea45ee80cc87c1cea980a9"><span data-offset-key="fe42fe1dbdea45ee80cc87c1cea980a9:0">Learn what graphs are useful for</span></span></span>

<span class="text-4505230f--HeadingH600-23f228db--textContentFamily-49a318e1"><span data-key="f9312b51746d4dcda85f1cf20f9ddaec"><span data-offset-key="f9312b51746d4dcda85f1cf20f9ddaec:0">What Are Graphs?</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="4de074bb61c3400191f04b6d87cae168"><span data-offset-key="4de074bb61c3400191f04b6d87cae168:0">Graphs are collections of related data. They're like trees, except connections can be made from any node to any other node, even forming loops.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="0d432a35b84840a2bb584d6ae6b72a29"><span data-offset-key="0d432a35b84840a2bb584d6ae6b72a29:0">The nodes in a graph are called </span><span data-offset-key="0d432a35b84840a2bb584d6ae6b72a29:1">*vertexes*</span><span data-offset-key="0d432a35b84840a2bb584d6ae6b72a29:2"> (or </span><span data-offset-key="0d432a35b84840a2bb584d6ae6b72a29:3">*vertices*</span><span data-offset-key="0d432a35b84840a2bb584d6ae6b72a29:4"> or </span><span data-offset-key="0d432a35b84840a2bb584d6ae6b72a29:5">*verts*</span><span data-offset-key="0d432a35b84840a2bb584d6ae6b72a29:6">), and the connections between the verts are called </span><span data-offset-key="0d432a35b84840a2bb584d6ae6b72a29:7">*edges*</span><span data-offset-key="0d432a35b84840a2bb584d6ae6b72a29:8">.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="a54cac5646fb4f2da148970b77d5e5e6"><span data-offset-key="a54cac5646fb4f2da148970b77d5e5e6:0">And edge denotes a relationship or linkage between the two verts.</span></span></span>

<span class="text-4505230f--HeadingH600-23f228db--textContentFamily-49a318e1"><span data-key="e0d2a92901104a1c89db48d1d1877f45"><span data-offset-key="e0d2a92901104a1c89db48d1d1877f45:0">What can they represent?</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="c892856ade51409a946681d0f75ea2f0"><span data-offset-key="c892856ade51409a946681d0f75ea2f0:0">Graphs can represent any kind of multiway relational data.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="4cb6da50d1084348bc5b06eb5773191f"><span data-offset-key="4cb6da50d1084348bc5b06eb5773191f:0">This could be a collection of cities and linking roads.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="21539e090d1e4f5493e110a7a5bddd2f"><span data-offset-key="21539e090d1e4f5493e110a7a5bddd2f:0">It could be a collection of computers on a network.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="15d6368e180840a8ae327cb807cc5ae0"><span data-offset-key="15d6368e180840a8ae327cb807cc5ae0:0">It could be a population of people who know each other and </span></span><a href="https://en.wikipedia.org/wiki/Six_Degrees_of_Kevin_Bacon" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="6c87bbb019914ee3b145e7e02fe89ba7"><span data-offset-key="6c87bbb019914ee3b145e7e02fe89ba7:0">Kevin Bacon</span></span></a><span data-key="8aa40ad020b345079e5ec2d891c4d488"><span data-offset-key="8aa40ad020b345079e5ec2d891c4d488:0">.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="d460078f2ba64aa3a5667f07c8d7f618"><span data-offset-key="d460078f2ba64aa3a5667f07c8d7f618:0">It could represent trade relationships between nations.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="f832a34dc94a4cbcb6ffa2bfeb01da40"><span data-offset-key="f832a34dc94a4cbcb6ffa2bfeb01da40:0">And so on.</span></span></span>

<figure><img src="https://gblobscdn.gitbook.com/assets%2F-Mij72ebV4OjqJvBacMy%2Fsync%2F2f9e00f1c8d8bc049f007029903f3c96a2a2fa6b.png?alt=media" class="image-52799b3c" /></figure>

<span class="text-4505230f--HeadingH600-23f228db--textContentFamily-49a318e1"><span data-key="30c14b5232c74cf98e06e653b25cb623"><span data-offset-key="30c14b5232c74cf98e06e653b25cb623:0">Definitions</span></span></span>

### 

<span class="text-4505230f--HeadingH400-686c0942--textContentFamily-49a318e1"><span data-key="c97fcd847af946339179a71471de5d4d"><span data-offset-key="c97fcd847af946339179a71471de5d4d:0">Directed/Undirected Graphs</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="f8d2620b2feb4f9589ce929757ade02b"><span data-offset-key="f8d2620b2feb4f9589ce929757ade02b:0">If the edges are "one way" (have an arrow), the graph is said to be a </span><span data-offset-key="f8d2620b2feb4f9589ce929757ade02b:1">*directed graph*</span><span data-offset-key="f8d2620b2feb4f9589ce929757ade02b:2">. If there are no arrows, the edges are bidirectional and the graph is an </span><span data-offset-key="f8d2620b2feb4f9589ce929757ade02b:3">*undirected*</span><span data-offset-key="f8d2620b2feb4f9589ce929757ade02b:4"> graph.</span></span></span>

<figure><img src="https://gblobscdn.gitbook.com/assets%2F-Mij72ebV4OjqJvBacMy%2Fsync%2F85fb02f5aa0681e647674607b16f15a612ef990a.png?alt=media" class="image-52799b3c" /></figure>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="7833047175794408980c15dd8970bc4b"><span data-offset-key="7833047175794408980c15dd8970bc4b:0">This is an </span><span data-offset-key="7833047175794408980c15dd8970bc4b:1">**undirected graph**</span><span data-offset-key="7833047175794408980c15dd8970bc4b:2"> which could represent a social network like Facebook. Alice is friends with Bob, Carol and Dave, Bob is friends with Alice and Dave, Carol is only friend with Alice, and Dave is friends with only Alice and Bob. In this example, the nodes represent people and the edges represent friendship.</span></span></span>

<figure><img src="https://bgoonz42.gitbook.io/datastructures-in-pytho/abstract-data-structures/untitled-1/img/social_graph_directed.jpg" alt="Directed Graph" class="image-52799b3c" /><figcaption><span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1" style="max-width: 100%">Directed Graph</span></figcaption></figure>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="442df05902d24da48490c843b625d8cb"><span data-offset-key="442df05902d24da48490c843b625d8cb:0">This is an </span><span data-offset-key="442df05902d24da48490c843b625d8cb:1">**directed graph**</span><span data-offset-key="442df05902d24da48490c843b625d8cb:2"> which could represent a social network like Twitter or Instagram. Since Twitter/Instagram follows are one-way as opposed to always-mutual Facebook friendships, they are represented with arrows. In the above directed graph, Alice and Bob follow each other, Dave follows Alice and Bob, and Carol only follows Alice.</span></span></span>

### 

<span class="text-4505230f--HeadingH400-686c0942--textContentFamily-49a318e1"><span data-key="d7724dcf243b4ec6a1a852ceb4d437b5"><span data-offset-key="d7724dcf243b4ec6a1a852ceb4d437b5:0">Cyclic/Acyclic Graphs</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="61b1e9bcca274d28a8e8ce7374db6cbb"><span data-offset-key="61b1e9bcca274d28a8e8ce7374db6cbb:0">If a cycle can be formed (e.g. you can follow the edges and arrive again at an already-visited vert), the graph is </span><span data-offset-key="61b1e9bcca274d28a8e8ce7374db6cbb:1">*cyclic*</span><span data-offset-key="61b1e9bcca274d28a8e8ce7374db6cbb:2">. Otherwise it is </span><span data-offset-key="61b1e9bcca274d28a8e8ce7374db6cbb:3">*acyclic*</span><span data-offset-key="61b1e9bcca274d28a8e8ce7374db6cbb:4">.</span></span></span>

### 

<span class="text-4505230f--HeadingH400-686c0942--textContentFamily-49a318e1"><span data-key="9645a170fa8c4a7090e64ea754611132"><span data-offset-key="9645a170fa8c4a7090e64ea754611132:0">Weighted Graphs</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="423cb50a71b3481daa8cbe45bc96ad4f"><span data-offset-key="423cb50a71b3481daa8cbe45bc96ad4f:0">Graphs with values (</span><span data-offset-key="423cb50a71b3481daa8cbe45bc96ad4f:1">*weights*</span><span data-offset-key="423cb50a71b3481daa8cbe45bc96ad4f:2">) associated with the edges are called </span><span data-offset-key="423cb50a71b3481daa8cbe45bc96ad4f:3">*weighted graphs*</span><span data-offset-key="423cb50a71b3481daa8cbe45bc96ad4f:4">.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="f9c89b0e0fe945c7b956656a45dbae44"><span data-offset-key="f9c89b0e0fe945c7b956656a45dbae44:0">The meaning of the weight is dependent on the type of graph. A graph of road network segments might have weight represent the length of the road. The higher the total weight of a route on the graph, the longer the trip is. The weights can be used to help decide if a particular route should be chosen over another.</span></span></span>

<figure><img src="https://gblobscdn.gitbook.com/assets%2F-Mij72ebV4OjqJvBacMy%2Fsync%2Ff63998a7af9e994560bba9629a080c0c3886b335.png?alt=media" class="image-52799b3c" /></figure>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="1e527c9384fc4235994194e49b697280"><span data-offset-key="1e527c9384fc4235994194e49b697280:0">Weights can be further modified. For example, if one were building a bicycle map, roads with bad car traffic or very steep uphills could be given unnaturally large weights so a routing algorithm would be unlikely to take them. (This is how Google Maps avoids freeways when you ask it for walking directions.)</span></span></span>

### 

<span class="text-4505230f--HeadingH400-686c0942--textContentFamily-49a318e1"><span data-key="3268af1b94e74c43b965a006097a89cd"><span data-offset-key="3268af1b94e74c43b965a006097a89cd:0">Directed Acyclic Graphs (DAGs)</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="0543c902d23f496792f464f817c2dc9e"><span data-offset-key="0543c902d23f496792f464f817c2dc9e:0">A </span><span data-offset-key="0543c902d23f496792f464f817c2dc9e:1">*directed acyclic graph*</span><span data-offset-key="0543c902d23f496792f464f817c2dc9e:2"> (</span><span data-offset-key="0543c902d23f496792f464f817c2dc9e:3">*DAG*</span><span data-offset-key="0543c902d23f496792f464f817c2dc9e:4">) has a number of applications. From </span></span><a href="https://en.wikipedia.org/wiki/Directed_acyclic_graph" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="38a34cdadff94a4e82e5071fb7804c70"><span data-offset-key="38a34cdadff94a4e82e5071fb7804c70:0">Wikipedia</span></span></a><span data-key="2b4efc98fa954ffc84550c11b3115886"><span data-offset-key="2b4efc98fa954ffc84550c11b3115886:0">:</span></span></span>

> <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="e030be8f18104c2996041e6fb0fc93b5"><span data-offset-key="e030be8f18104c2996041e6fb0fc93b5:0">DAGs can model many different kinds of information. A spreadsheet can be modeled as a DAG, with a vertex for each cell and an edge whenever the formula in one cell uses the value from another; a topological ordering of this DAG can be used to update all cell values when the spreadsheet is changed. Similarly, topological orderings of DAGs can be used to order the compilation operations in a makefile. The program evaluation and review technique uses DAGs to model the milestones and activities of large human projects, and schedule these projects to use as little total time as possible. Combinational logic blocks in electronic circuit design, and the operations in dataflow programming languages, involve acyclic networks of processing elements. DAGs can also represent collections of events and their influence on each other, either in a probabilistic structure such as a Bayesian network or as a record of historical data such as family trees or the version histories of distributed revision control systems. DAGs can also be used as a compact representation of sequence data, such as the directed acyclic word graph representation of a collection of strings, or the binary decision diagram representation of sequences of binary choices.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="cb026bb95a754d759f5818e41c0621b3"><span data-offset-key="cb026bb95a754d759f5818e41c0621b3:0">It's notable that git uses a DAG to represent commits. A commit can have a child commit, or more than one child commit (in the case of a branch). A child could come from one parent commit, or from two (in the case of a merge). But there's no way to go back and form a repeating loop in the git commit hierarchy.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="dfba379e6bcc4bdfbf775016115fdfa6"><span data-offset-key="dfba379e6bcc4bdfbf775016115fdfa6:0"><span data-slate-zero-width="n">​</span></span></span></span>

<a href="../../abstract-data-structures/untitled-1/array.html" class="reset-3c756112--card-6570f064--whiteCard-fff091a4--card-5e635eb5--S400Vertical-a18add7e"></a>

<span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Array</span>

<span class="text-4505230f--TextH200-a3425406--textContentFamily-49a318e1">/abstract-data-structures/untitled-1/array</span>

<a href="https://bgoonz42.gitbook.io/datastructures-in-pytho/" class="reset-3c756112--card-6570f064--whiteCard-fff091a4--card-5e635eb5--S400Vertical-a18add7e"></a>

<span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Home</span>

<span class="text-4505230f--TextH200-a3425406--textContentFamily-49a318e1">/</span>

<a href="../../abstract-data-structures/untitled-1/tree/binary-search-tree.html" class="reset-3c756112--card-6570f064--whiteCard-fff091a4--card-5e635eb5--S400Vertical-a18add7e"></a>

<span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Binary Search Tree</span>

<span class="text-4505230f--TextH200-a3425406--textContentFamily-49a318e1">/abstract-data-structures/untitled-1/tree/binary-search-tree</span>

<a href="../../abstract-data-structures/untitled-1/untitled-4.html" class="reset-3c756112--card-6570f064--whiteCard-fff091a4--card-5e635eb5--S400Vertical-a18add7e"></a>

<span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Linked List</span>

<span class="text-4505230f--TextH200-a3425406--textContentFamily-49a318e1">/abstract-data-structures/untitled-1/untitled-4</span>

<a href="array/extra-array.html" class="reset-3c756112--card-6570f064--whiteCard-fff091a4--card-5e635eb5--S400Vertical-a18add7e"></a>

<span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Extra-Array</span>

<span class="text-4505230f--TextH200-a3425406--textContentFamily-49a318e1">/abstract-data-structures/untitled-1/array/extra-array</span>

<a href="stack.html" class="reset-3c756112--card-6570f064--whiteCard-fff091a4--card-5e635eb5--S400Vertical-a18add7e"></a>

<span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Stack</span>

<span class="text-4505230f--TextH200-a3425406--textContentFamily-49a318e1">/abstract-data-structures/untitled-1/stack</span>

<a href="binary-tree.html" class="reset-3c756112--card-6570f064--whiteCard-fff091a4--card-5e635eb5--S400Vertical-a18add7e"></a>

<span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Binary Tree</span>

<span class="text-4505230f--TextH200-a3425406--textContentFamily-49a318e1">/abstract-data-structures/untitled-1/tree/binary-tree</span>

<a href="https://bgoonz42.gitbook.io/datastructures-in-pytho/" class="reset-3c756112--card-6570f064--whiteCard-fff091a4--card-5e635eb5--S400Vertical-a18add7e"></a>

<span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Home</span>

<span class="text-4505230f--TextH200-a3425406--textContentFamily-49a318e1">/</span>

<a href="../../abstract-data-structures/untitled-1/untitled-6.html" class="reset-3c756112--card-6570f064--whiteCard-fff091a4--card-5e635eb5--S400Vertical-a18add7e"></a>

<span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Recursion</span>

<span class="text-4505230f--TextH200-a3425406--textContentFamily-49a318e1">/abstract-data-structures/untitled-1/untitled-6</span>

<a href="untitled-5.html" class="reset-3c756112--card-6570f064--whiteCard-fff091a4--card-5e635eb5--S400Vertical-a18add7e"></a>

<span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Hash Table</span>

<span class="text-4505230f--TextH200-a3425406--textContentFamily-49a318e1">/abstract-data-structures/untitled-1/untitled-5</span>

<a href="untitled-2.html" class="reset-3c756112--card-6570f064--whiteCard-fff091a4--card-5e635eb5--S400Vertical-a18add7e"></a>

<span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Searching</span>

<span class="text-4505230f--TextH200-a3425406--textContentFamily-49a318e1">/abstract-data-structures/untitled-1/untitled-2</span>

<a href="../../abstract-data-structures/untitled-1/untitled-3.html" class="reset-3c756112--card-6570f064--whiteCard-fff091a4--card-5e635eb5--S400Vertical-a18add7e"></a>

<span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Sorting</span>

<span class="text-4505230f--TextH200-a3425406--textContentFamily-49a318e1">/abstract-data-structures/untitled-1/untitled-3</span>

<a href="queue-sandbox.html" class="reset-3c756112--card-6570f064--whiteCard-fff091a4--card-5e635eb5--S400Vertical-a18add7e"></a>

<span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Queue Sandbox</span>

<span class="text-4505230f--TextH200-a3425406--textContentFamily-49a318e1">/abstract-data-structures/untitled-1/queue/queue-sandbox</span>

<a href="untitled-5.html" class="reset-3c756112--card-6570f064--whiteCard-fff091a4--card-5e635eb5--S400Vertical-a18add7e"></a>

<span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Hash Table</span>

<span class="text-4505230f--TextH200-a3425406--textContentFamily-49a318e1">/abstract-data-structures/untitled-1/untitled-5</span>

<a href="untitled-4/double-linked-list.html" class="reset-3c756112--card-6570f064--whiteCard-fff091a4--card-5e635eb5--S400Vertical-a18add7e"></a>

<span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Double Linked List</span>

<span class="text-4505230f--TextH200-a3425406--textContentFamily-49a318e1">/abstract-data-structures/untitled-1/untitled-4/double-linked-list</span>

<a href="untitled-1.html" class="reset-3c756112--card-6570f064--whiteCard-fff091a4--card-5e635eb5--S400Vertical-a18add7e"></a>

<span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Graphs</span>

<span class="text-4505230f--TextH200-a3425406--textContentFamily-49a318e1">/abstract-data-structures/untitled-1/untitled-1</span>

<a href="untitled.html" class="reset-3c756112--card-6570f064--whiteCard-fff091a4--card-5e635eb5--S400Vertical-a18add7e"></a>

<span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Exotic</span>

<span class="text-4505230f--TextH200-a3425406--textContentFamily-49a318e1">/abstract-data-structures/untitled-1/untitled</span>

<a href="../../abstract-data-structures/untitled-1/heap.html" class="reset-3c756112--card-6570f064--whiteCard-fff091a4--card-5e635eb5--S400Vertical-a18add7e"></a>

<span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Heap</span>

<span class="text-4505230f--TextH200-a3425406--textContentFamily-49a318e1">/abstract-data-structures/untitled-1/heap</span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="d66a84c1bde447bd8843d3bb157ee369"><span data-offset-key="d66a84c1bde447bd8843d3bb157ee369:0"><span data-slate-zero-width="n">​</span></span></span></span>

<a href="../../abstract-data-structures/untitled-1/untitled/dynamic-programming.html" class="reset-3c756112--card-6570f064--whiteCard-fff091a4--cardPrevious-56a5e674"></a>

<span class="text-4505230f--TextH200-a3425406--textContentFamily-49a318e1">Previous</span>

<span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Dynamic Programming</span>

<a href="overflow-practice-problems.html" class="reset-3c756112--card-6570f064--whiteCard-fff091a4--cardNext-19241c42"></a>

<span class="text-4505230f--TextH200-a3425406--textContentFamily-49a318e1">Next</span>

<span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Overflow Practice Problems</span>

<img src="https://avatars.githubusercontent.com/u/66654881?v=4" class="image-67b14f24--avatar-1c1d03ec" />

<span class="text-4505230f--TextH200-a3425406--textContentFamily-49a318e1">Last updated 9 hours ago</span>

<a href="https://github.com/bgoonz/python-gitbook/blob/master/abstract-data-structures/untitled-1/untitled-1/README.md" class="reset-3c756112--menuItem-aa02f6ec--menuItemLight-757d5235--menuItemInline-173bdf97--pageSideMenuItem-22949732"></a>

<span class="text-4505230f--UIH300-2063425d--textUIFamily-5ebd8e40">Edit on GitHub</span>

<span class="text-4505230f--UIH300-2063425d--textUIFamily-5ebd8e40">Export as PDF</span>

<span class="text-4505230f--InfoH100-1e92e1d1--textContentFamily-49a318e1">Contents</span>

<a href="untitled-1.html#graph" class="reset-3c756112--menuItem-aa02f6ec--menuItemLight-757d5235--menuItemInline-173bdf97--pageTocItem-f4427024"></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1"><span class="text-4505230f--UIH200-50ead35f--textContentFamily-49a318e1">Graph</span></span>

<a href="untitled-1.html#intro-to-graphs" class="reset-3c756112--menuItem-aa02f6ec--menuItemLight-757d5235--menuItemInline-173bdf97--pageTocItem-f4427024"></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1"><span class="text-4505230f--UIH200-50ead35f--textContentFamily-49a318e1">Intro to Graphs</span></span>

<a href="untitled-1.html#objectives" class="reset-3c756112--menuItem-aa02f6ec--menuItemLight-757d5235--menuItemInline-173bdf97--pageTocItem-f4427024"></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1"><span class="text-4505230f--UIH200-50ead35f--textContentFamily-49a318e1--pageTocLinkH2-2294976c">Objectives</span></span>

<a href="untitled-1.html#what-are-graphs" class="reset-3c756112--menuItem-aa02f6ec--menuItemLight-757d5235--menuItemInline-173bdf97--pageTocItem-f4427024"></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1"><span class="text-4505230f--UIH200-50ead35f--textContentFamily-49a318e1--pageTocLinkH2-2294976c">What Are Graphs?</span></span>

<a href="untitled-1.html#what-can-they-represent" class="reset-3c756112--menuItem-aa02f6ec--menuItemLight-757d5235--menuItemInline-173bdf97--pageTocItem-f4427024"></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1"><span class="text-4505230f--UIH200-50ead35f--textContentFamily-49a318e1--pageTocLinkH2-2294976c">What can they represent?</span></span>

<a href="untitled-1.html#definitions" class="reset-3c756112--menuItem-aa02f6ec--menuItemLight-757d5235--menuItemInline-173bdf97--pageTocItem-f4427024"></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1"><span class="text-4505230f--UIH200-50ead35f--textContentFamily-49a318e1--pageTocLinkH2-2294976c">Definitions</span></span>
